# app/Http/Resources/OrderActionResource.php
@@ -1,0 +1,26 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class OrderActionResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array
+     */
+    public function toArray($request)
+    {
+        return [
+            'id'=>$this->id,
+            'price'=>$this->price,
+            'title'=>$this->title,
+            'photo'=>$this->photo,
+            'created_at'=>$this->created_at,
+            'updated_at'=>$this->updated_at,
+        ];
+    }
+}
